apps/media/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
  labels:
    app.kubernetes.io/name: plex
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: plex
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plex
    spec:
      priorityClassName: homelab-standard
      securityContext:
        supplementalGroups:
          - 993
      containers:
        - name: plex
          image: lscr.io/linuxserver/plex:1.43.4.10903-e5521bd8c-ls326@sha256:3f71bd6eb6a4478ac19b11c5d0ba9746a5eacad1976f9b99ed4a2c21767e57bb
          ports:
            - name: http
              containerPort: 32400
          resources:
            requests:
              cpu: "1"
              memory: 1536Mi
              gpu.intel.com/i915: "1"
            limits:
              cpu: "6"
              memory: 4Gi
              gpu.intel.com/i915: "1"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
              readOnly: true
            - name: media
              mountPath: /mnt/media
              readOnly: true
            - name: transcode
              mountPath: /transcode
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: plex-config-pvc
        - name: media
          hostPath:
            path: /mnt/media
            type: Directory
        - name: transcode
          persistentVolumeClaim:
            claimName: plex-transcode-pvc
