apps/media/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: plex
  ports:
    - name: http
      port: 32400
      targetPort: http
