apps/media/plex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: media
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - plex.worm.run
  rules:
    - host: plex.worm.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex
                port:
                  name: http
